Portfolio/src/app/main-content/my-work/work-left/work-left.component.scss
.mainContainer {
  padding-top: 70px;
  display: flex;
  flex-direction: row;
  max-width: 1920px;
  width: 100%;
  height: 460px;
  gap: 38px;
  justify-content: flex-start;
}

.imgContainer {
  display: flex;
  max-width: 720px;
  width: 100%;
  height: 460px;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  gap: 10px;
  flex-shrink: 0;
  padding-left: 50px;
}

.img {
  display: flex;
  width: 620px;
  height: 393px;
  padding: 10px 0px;
  align-items: flex-start;
  gap: 10px;
  flex-shrink: 0;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  z-index: 9;
  box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.15);
  transition: transform 0.2s ease;
  transform: scale(1) translateY(0);
  &:hover {
    transform: scale(1.1) translateY(-30px);
  }
}

.textContainer {
  display: flex;
  max-width: 536px;
  width: 100%;
  max-height: 339px;
  flex-direction: column;
  align-items: flex-start;
  gap: 35px;
  flex-shrink: 0;
  padding-right: 96px;
  padding-top: 191px;
}

.text {
  display: flex;
  max-width: 536px;
  width: 100%;
  flex-direction: column;
  align-items: flex-start;
  gap: 15px;
}

.header {
  height: 42.821px;
  color: var(--style-2-Style-2-blue-blue, #5988ff);
  font-family: Baloo;
  font-size: 45px;
  font-style: normal;
  font-weight: bold;
  line-height: 120%;
}
.skills {
  color: var(--style-2-Style-2-blue-blue, #5988ff);
  font-family: Montserrat;
  font-size: 23px;
  font-style: normal;
  font-weight: 400;
  line-height: 120%;
}
.description {
  max-width: 531px;
  width: 100%;
  color: var(--Black, #000);
  font-family: Montserrat;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 120%;
}

#gitBtn {
  display: flex;
  padding: 15px 30px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 10px;
  border: 2px solid var(--style-2-Style-2-blue-blue, #5988ff);
  box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.15);
  color: var(--style-2-Style-2-blue-blue, #5988ff);
  background-color: #fff;
  font-family: Poppins;
  font-size: 23px;
  font-style: normal;
  font-weight: 400;
  line-height: 120%;
  &:hover {
    cursor: pointer;
    animation: changeBackground 80ms ease-in-out;
    animation-fill-mode: forwards;
  }
}

#liveTestBtn {
  display: flex;
  padding: 15px 30px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 10px;
  background: var(--style-2-Style-2-blue-blue, #5988FF);
  color: var(--White, #fff);
  font-family: Poppins;
  font-size: 23px;
  font-style: normal;
  font-weight: 400;
  line-height: 120%;
  &:hover {
    cursor: pointer;
    animation: changeBackground 80ms ease-in-out;
    animation-fill-mode: forwards;
  }
}

.btnContainer {
  display: flex;
  justify-content: space-between;
  width: 95%;
}

@media (max-width: 1455px) {
  .mainContainer {
    justify-content: flex-end;
    gap: 0px;
  }
}

@media (max-width: 1330px) {
  .mainContainer {
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding-bottom: 300px;
  }

  .textContainer {
    padding-right: 0;
    padding-top: 50px;
  }

  .imgContainer {
    padding-left: 0;
  }
}

@media (max-width: 655px) {
  .img {
    width: 340px;
    height: 215px;
    &:hover {
      width: 360px;
      height: 235px;
      transition: width 0.2s, height 0.2s; 
          transform: translateY(-26px);
    }
  }

  .mainContainer {
    justify-content: center;
    padding-top: 0;
    padding-bottom: 200px;
  }

  .text {
    gap: 20px;
    align-items: center;
  }

  .textContainer {
    padding-left: 25px;
    padding-right: 25px;
    box-sizing: border-box;
  }

  .btnContainer {
    justify-content: space-between;
    z-index: 10;
  }

  #liveTestBtn {
    display: flex;
    padding: 13px 24px;
    height: 54px;
    box-sizing: border-box;
    &:hover {
      cursor: pointer;
      animation: changeBackgroundMobileLive 80ms ease-in-out;
      animation-fill-mode: forwards;
    }
  }

  #gitBtn {
    padding: 13px 24px;
    height: 54px;
    box-sizing: border-box;
    &:hover {
      cursor: pointer;
      animation: changeBackgroundMobile 80ms ease-in-out;
      animation-fill-mode: forwards;
    }
  }
}

@media (max-width: 375px) {
  .img {
    width: 315px;
    height: 195px;
    &:hover {
      width: 335px;
      height: 215px;
      transition: width 0.2s, height 0.2s; 
          transform: translateY(-26px);
    }
  }
}

